; ModuleID = '/home/carl/AnghaBench/linux/drivers/input/misc/extr_max77650-onkey.c_max77650_onkey_falling.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/input/misc/extr_max77650-onkey.c_max77650_onkey_falling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.max77650_onkey = type { i32, i32 }

@IRQ_HANDLED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @max77650_onkey_falling to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @max77650_onkey_falling(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.max77650_onkey*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.max77650_onkey*
  store %struct.max77650_onkey* %7, %struct.max77650_onkey** %5, align 8
  %8 = load %struct.max77650_onkey*, %struct.max77650_onkey** %5, align 8
  %9 = getelementptr inbounds %struct.max77650_onkey, %struct.max77650_onkey* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.max77650_onkey*, %struct.max77650_onkey** %5, align 8
  %12 = getelementptr inbounds %struct.max77650_onkey, %struct.max77650_onkey* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @input_report_key(i32 %10, i32 %13, i32 0)
  %15 = load %struct.max77650_onkey*, %struct.max77650_onkey** %5, align 8
  %16 = getelementptr inbounds %struct.max77650_onkey, %struct.max77650_onkey* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @input_sync(i32 %17)
  %19 = load i32, i32* @IRQ_HANDLED, align 4
  ret i32 %19
}

declare dso_local i32 @input_report_key(i32, i32, i32) #1

declare dso_local i32 @input_sync(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
